fixed the overflow content

--- a/static/css/request.css
+++ b/static/css/request.css
@@ -25,7 +25,7 @@ h2{
 
 .submit_button{
     padding: 10px 20px;
-    border: none;
+    border: 2px solid #53361C;
     background-color: #FEB301;
     color:#53361C;
     border-radius: 10px;
@@ -67,6 +67,7 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: space-between;
     gap: 10px;
 }
 
@@ -144,12 +145,13 @@ h2{
 }
 
 .job_card2 {
-    width: 300px;
+    max-width: 500px;
     flex-shrink: 0;
+    align-items: flex-start;
     border: 2px solid #53361C;
     border-radius: 12px;
     padding: 20px;
-    background-color: rgba(254, 179, 1, 0.8);
+    background-color: #FEB301;
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -171,6 +173,7 @@ h2{
     display: flex;
     flex-direction: row;
     gap: 20px;
+    padding: 10px 0;
     width: max-content;
 }
 
@@ -273,4 +276,14 @@ select:focus {
     margin: 10px 10px;
     border-radius: 8px;
     border: 2px solid #53361C;
+}
+
+.cbutton{
+    padding: 10px 20px;
+    background-color: #53361C;
+    border: 2px solid #FEB301;
+    border-radius: 10px;
+    color: #FEB301;
+    cursor: pointer;
+    font-weight: bolder;
 }
